--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   custom_navigation_bar: ^0.8.2
   dartz: ^0.10.1
-  device_info_plus: ^10.1.2
-  extended_image: ^8.2.3
+  device_info_plus: ^11.0.0
+  extended_image: ^9.0.0
   fade_shimmer: ^2.2.0
   firebase_core: ^3.4.1
   firebase_messaging: ^15.1.1
@@ -54,6 +54,7 @@ dependencies:
   flutter_hooks: ^0.20.5
   flutter_localizations:
     sdk: flutter
+  flutter_markdown: ^0.7.4+1
   flutter_secure_storage: ^9.2.2
   flutter_slidable: ^3.1.1
   flutter_staggered_grid_view: ^0.7.0
@@ -71,6 +72,8 @@ dependencies:
   onesignal_flutter: ^5.2.5
   path: ^1.9.0
   path_provider: ^2.1.4
+  pin_code_fields: ^8.0.1
+  pinput: ^5.0.0
   riverpod_annotation: ^2.3.5
   rxdart: ^0.28.0
   scrollable_positioned_list: ^0.3.8
@@ -95,7 +98,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   freezed: ^2.5.7
