--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   connectivity_plus: ^6.0.5
   cupertino_icons: ^1.0.8
   custom_navigation_bar: ^0.8.2
+  dart_mappable: ^4.3.0
   dartz: ^0.10.1
   device_info_plus: ^11.0.0
   extended_image: ^9.0.0
@@ -88,8 +89,9 @@ dependencies:
   uuid: ^4.5.0
 
 dev_dependencies:
-  build_runner: ^2.4.12
+  build_runner: ^2.4.13
   chopper_generator: ^8.0.2
+  dart_mappable_builder: ^4.3.0
   enven: ^1.0.1
   flutter_gen_runner: ^5.7.0
 
