--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,52 +33,52 @@ dependency_overrides:
   rxdart: ^0.28.0
 
 dependencies:
-  app_set_id: ^1.2.0
+  app_set_id: ^1.2.1
   carousel_slider: ^5.0.0
-  chopper: ^8.0.2
-  connectivity_plus: ^6.0.5
+  chopper: ^8.0.3
+  connectivity_plus: ^6.1.0
   cupertino_icons: ^1.0.8
   custom_navigation_bar: ^0.8.2
   dart_mappable: ^4.3.0
   dartz: ^0.10.1
-  device_info_plus: ^11.0.0
-  extended_image: ^9.0.0
+  device_info_plus: ^11.1.0
+  extended_image: ^9.0.5
   fade_shimmer: ^2.2.0
-  firebase_core: ^3.4.1
-  firebase_messaging: ^15.1.1
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
   flash: ^3.1.1
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.0
-  flutter_form_builder: ^9.4.1
+  flutter_form_builder: ^9.5.0
   flutter_hooks: ^0.20.5
   flutter_localizations:
     sdk: flutter
-  flutter_markdown: ^0.7.4+1
+  flutter_markdown: ^0.7.4
   flutter_secure_storage: ^9.2.2
   flutter_slidable: ^3.1.1
   flutter_staggered_grid_view: ^0.7.0
   form_builder_validators: ^11.0.0
   freezed_annotation: ^2.4.4
-  go_router: ^14.2.7
+  go_router: ^14.3.0
   google_fonts: ^6.2.1
-  hooks_riverpod: ^2.5.2
+  hooks_riverpod: ^2.6.1
   intl: ^0.19.0
   # isar: ^3.1.0+1
   # isar_flutter_libs: ^3.1.0+1
-  jovial_svg: ^1.1.22
+  jovial_svg: ^1.1.23
   json_annotation: ^4.9.0
   keyboard_dismisser: ^3.0.0
-  onesignal_flutter: ^5.2.5
+  onesignal_flutter: ^5.2.6
   path: ^1.9.0
-  path_provider: ^2.1.4
+  path_provider: ^2.1.5
   pin_code_fields: ^8.0.1
   pinput: ^5.0.0
-  riverpod_annotation: ^2.3.5
+  riverpod_annotation: ^2.6.1
   rxdart: ^0.28.0
   scrollable_positioned_list: ^0.3.8
-  sembast: ^3.7.4
+  sembast: ^3.7.5
   shared_preferences: ^2.3.2
   shimmer: ^3.0.0
   skeletonizer: ^1.4.2
@@ -86,14 +86,14 @@ dependencies:
   smooth_page_indicator: ^1.2.0
   # squadron: ^5.1.3
   super_sliver_list: ^0.4.1
-  uuid: ^4.5.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   build_runner: ^2.4.13
-  chopper_generator: ^8.0.2
+  chopper_generator: ^8.0.3
   dart_mappable_builder: ^4.3.0
   enven: ^1.0.1
-  flutter_gen_runner: ^5.7.0
+  flutter_gen_runner: ^5.8.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -106,8 +106,8 @@ dev_dependencies:
   freezed: ^2.5.7
   # isar_generator: ^3.1.0+1
   json_serializable: ^6.8.0
-  riverpod_generator: ^2.4.3
-  riverpod_lint: ^2.3.13
+  riverpod_generator: ^2.6.2
+  riverpod_lint: ^2.6.2
   # squadron_builder: ^2.4.2
   very_good_analysis: ^6.0.0
 
