--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.2
+  sdk: ^3.5.4
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,8 +29,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 
 dependency_overrides:
-  meta: ^1.15.0
-  rxdart: ^0.28.0
+  # meta: ^1.15.0
+  # rxdart: ^0.28.0
+  intl: ^0.20.1
+  path: ^1.9.1
+
+
 
 dependencies:
   app_set_id: ^1.2.1
@@ -41,16 +45,16 @@ dependencies:
   custom_navigation_bar: ^0.8.2
   dart_mappable: ^4.3.0
   dartz: ^0.10.1
-  device_info_plus: ^11.1.0
+  device_info_plus: ^11.1.1
   extended_image: ^9.0.7
   fade_shimmer: ^2.2.0
-  firebase_core: ^3.6.0
-  firebase_messaging: ^15.1.3
+  firebase_core: ^3.8.0
+  firebase_messaging: ^15.1.5
   flash: ^3.1.1
-  flex_color_scheme: ^8.0.0
+  flex_color_scheme: ^8.0.2
   flutter:
     sdk: flutter
-  flutter_animate: ^4.5.0
+  flutter_animate: ^4.5.2
   flutter_form_builder: ^9.5.0
   flutter_hooks: ^0.20.5
   flutter_localizations:
@@ -62,22 +66,23 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   form_builder_validators: ^11.0.0
   freezed_annotation: ^2.4.4
-  go_router: ^14.4.1
+  go_router: ^14.6.2
   hooks_riverpod: ^2.6.1
-  intl: ^0.19.0
-  jovial_svg: ^1.1.23
+  http: ^1.2.2
+  intl: ^0.20.1
+  jovial_svg: ^1.1.24
   json_annotation: ^4.9.0
   keyboard_dismisser: ^3.0.0
-  onesignal_flutter: ^5.2.6
-  path: ^1.9.0
+  onesignal_flutter: ^5.2.8
+  path: ^1.9.1
   path_provider: ^2.1.5
   pin_code_fields: ^8.0.1
   pinput: ^5.0.0
   riverpod_annotation: ^2.6.1
   rxdart: ^0.28.0
   scrollable_positioned_list: ^0.3.8
-  sembast: ^3.7.5
-  shared_preferences: ^2.3.2
+  sembast: ^3.8.0
+  shared_preferences: ^2.3.3
   shimmer: ^3.0.0
   skeletonizer: ^1.4.2
   sliver_tools: ^0.2.12
@@ -105,9 +110,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.5.7
-  json_serializable: ^6.8.0
-  riverpod_generator: ^2.6.2
-  riverpod_lint: ^2.6.2
+  json_serializable: ^6.9.0
+  riverpod_generator: ^2.6.3
+  riverpod_lint: ^2.6.3
   very_good_analysis: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
